# EasyKNN

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
EasyKnn/: __init__.py  dataset.py  errors.py  neighbors.py  neighbours.py  plan.py  point.py  value.py  weight.py
docs/: EasyKnn.rst  conf.py  index.rst  modules.rst
examples/: Poudlar.py  basic example.py  cars dealership.py
