[project]
name = "EasyPyKnn"
version = "0.2.0"
authors = [
  { name="v0ltis", email="hello@voltis.me" },
]
description = "An easy educational implementation of the K nearest neighbors algorithm"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Education',
        'Topic :: Education',
        'Programming Language :: Python :: 3',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Natural Language :: English'
    ]

[project.urls]
"Homepage" = "https://github.com/v0ltis/EasyKNN"
"Bug Tracker" = "https://github.com/v0ltis/EasyKNN/issues"